fix overflow progress bar for HomePageHero component

--- a/src/components/HomePageHero.scss
+++ b/src/components/HomePageHero.scss
@@ -52,12 +52,14 @@
   .progress-bar-green{
     background: var(--ion-color-primary);
     border-radius: 8px;
+    max-width: 100%;
     height:24px;
   }
 
   .progress-bar-red{
     background: #ff6961;
     border-radius: 8px;
+    max-width: 100%;
     height:24px;
   }
   
